full_load_20251027_152726.log
2025-10-27 15:27:26,256 - INFO - ================================================================================
2025-10-27 15:27:26,257 - INFO - STARTING FULL KNOWLEDGE GRAPH LOAD
2025-10-27 15:27:26,257 - INFO - ================================================================================
2025-10-27 15:27:26,257 - INFO - 
2025-10-27 15:27:26,257 - INFO - Loading script modules...
2025-10-27 15:27:26,777 - ERROR - Failed to load script modules: unexpected indent (2_patient_flow_through_the_hospital.py, line 119)
2025-10-27 15:27:26,778 - ERROR - Full traceback:
Traceback (most recent call last):
  File "c:\Users\Coditas\Desktop\Projects\CKG\Phase1\Scripts\52_full_load.py", line 66, in main
    script2 = import_module_from_file(os.path.join(script_dir, "2_patient_flow_through_the_hospital.py"), "patient_flow_through_the_hospital")
  File "c:\Users\Coditas\Desktop\Projects\CKG\Phase1\Scripts\52_full_load.py", line 27, in import_module_from_file
    spec.loader.exec_module(module)
    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "c:\Users\Coditas\Desktop\Projects\CKG\Phase1\Scripts\2_patient_flow_through_the_hospital.py", line 119
    if pd.isna(hadm_id):
IndentationError: unexpected indent
